# ciptools

./: README.md  pyproject.toml
.github/workflows/: codeql-analysis.yml  test.yaml
ciptools/: configuration.py  converters.py  metadata.py  monkey.py  resources.py  validators.py
ciptools/database/: client.py  pgpass.py
example/: db_transaction.py
src/ciptools/: __init__.py  configuration.py  killer.py  metadata.py  parsers.py  resources.py  strings.py  validators.py
src/ciptools/database/: __init__.py  pgpass.py  pool.py
tests/: test_configuration.py  test_converters.py  test_metadata.py  test_validators.py  text_strings.py
tests/configurations/: test2.conf  test3.conf
